<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/without_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtStatus" />

    <Button
        android:id="@+id/withStorageLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_storage_low"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/withBatteryLow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_requiresbatterynotlow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withStorageLow" />

    <Button
        android:id="@+id/withRequiresCharging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_requirescharging"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withBatteryLow" />

    <Button
        android:id="@+id/withDeviceIdle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_requires_device_idle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withRequiresCharging" />

    <Button
        android:id="@+id/withRequiredNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_getrequirednetworktype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withDeviceIdle" />

    <Button
        android:id="@+id/withPeriodic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_periodic_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withRequiredNetwork" />

</androidx.constraintlayout.widget.ConstraintLayout>